2022-03-01: new sample rates 32k, 640k, doc update, tools update [4cb4edb]
2022-02-28: upversion to FW0210, new sample rate 128 kS/s (ID: 113) [f4755d2]
2022-02-08: more tool programs in examples [6c9d2d7]
2022-02-05: Merge branch 'main' of github.com:Ho-Ro/Hantek6022API fix last commit [078dffd]
2022-02-05: fix github workflow [0966f8b]
2022-02-05: fix github workflow [5a50a99]
2022-02-05: more github workflow setup [0c97913]
2022-02-05: fix github workflow [5324872]
2022-02-05: replace "checkinstall" by "python3-stdeb" in github workflow setup [46962d4]
2022-02-05: change debian build from "checkinstall" to "stdeb" tool [de61c32]
2021-11-17: Fix #12: Avoid nasty sdcc 4.0 regression [a9b362f]
2021-08-22: fixed sdcc_debian_old/sdcc_3.8.0.tgz package [3884370]
2021-08-22: provide sdcc packages from buster (ver. 3.8.0) and stretch (ver. 3.5.0) [81f6913]
2021-08-22: revert FW to debian buster build [9279d39]
2021-08-20: fix regresion: https://github.com/OpenHantek/OpenHantek6022/issues/213 [df873a4]
2021-06-06: fix #11; add option --decimalcomma to create german csv [d350e23]
2021-04-13: update README [2e29ddd]
2021-04-13: Ubuntu-20.04 is mandatory to get a recent SDCC for build [31b111f]
2021-04-13: Create build_check.yml [7dfa5a0]
2021-02-22: CI provider appveyor: upgrade build system to Ubuntu2004 [006297c]
2021-02-22: more calibration frequency possibilities [075c6b6]
2021-02-21: new functon to set the calibration pulse frequency [0a018c4]
2021-02-14: update to FW version 2.08 [dcba8fe]
2021-02-14: close #9 - use additional port bits that are easier to solder [599d8c0]
2021-02-14: add FW for new DIY model DSO6021; no functional change; doc update [73b08d7]
2021-02-11: small tool to initialize the eeprom (erase and set hantek usb id) [78136c6]
2021-02-11: doc update [76ef609]
2021-02-08: use the correct udev file name [ec7e91f]
2021-02-08: added 6022BL to the udev rule [a27e411]
2020-12-11: Merge branch 'master' of github.com:Ho-Ro/Hantek6022API [fb41d0c]