@@ -1,21 +1,20 @@
 #!/usr/bin/python3
 
-__author__ = 'Jochen Hoenicke'
-
 import sys
 from PyHT6022.LibUsbScope import Oscilloscope
-
 
 scope = Oscilloscope()
 scope.setup()
 if not scope.open_handle():
     sys.exit( -1 )
 
-# read at end-16, 16 bytes
-eeprom = scope.read_eeprom( 256 - 16, 16 )
+# read eeprom content from file
+f = open( "eeprom_256.dat", "rb" )
+eeprom = f.read()
+f.close()
 
-# write at end-16
-scope.write_eeprom( 256 - len( eeprom ), eeprom )
+# write_eeprom content
+scope.write_eeprom( len( eeprom ), eeprom )
 scope.close_handle()
 
 print( eeprom )
